# eg-error-handling

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  main.cpp
src/acme/: common.h  socket.cpp  socket.h
test/: CMakeLists.txt
test/0/: test.sh
test/1/: test.sh
test/2/: test.sh
test/3/: test.sh
test/4/: test.sh
test/5/: test.sh
test/6/: test.sh
test/approval0/: expected-stdout  test.sh
test/scripts/: build-clang.sh  install-clang.sh  lint.sh
test/toolchain/: clang.cmake  gcc.cmake
